# nmpc-controller

./: .clang-format  CMakeLists.txt  README.md  install_ipopt.sh
benchmark/: bm_nmpc.cpp
include/: model.hpp  mpc.hpp
src/: model.cpp  mpc.cpp
